fixed some dark mode bugs

--- a/frontend/src/app/package/components/package-info/package-info.component.scss
+++ b/frontend/src/app/package/components/package-info/package-info.component.scss
@@ -13,8 +13,8 @@
     .share-btn {
         ::ng-deep .mat-raised-button {
             box-shadow: none;
-            line-height: 13px;
-            padding: 6px 10px;
+            line-height: 10px;
+            padding: 9px 10px;
             border: 1px solid var(--gray-9-color);
         }
     }
