--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -40,6 +40,10 @@ h3 {
     color: var(--gray-1-color);
 }
 
+.gray-txt {
+    color: var(--gray-2-color);
+}
+
 .color-info {
     color: var(--info-color);
 
@@ -345,7 +349,7 @@ mat-select {
 .app-raised-button {
     outline: none !important;
     border-radius: 6px;
-    border: 1px solid var(--tranparent-border);
+    border: 1px solid var(--info-color);
     font-family: $family-roboto;
     font-style: $style-normal;
     font-weight: $weight-400;
@@ -354,22 +358,17 @@ mat-select {
     text-align: center;
     padding: 8px 15px;
     color: $secondary-color;
-    background-color: var(--custom-info-color);
+    background-color: var(--info-color);
     transition: background-color ease 0.5s;
 
     &:hover {
-        background-color: var(--custom-info-hover-color);
+        background-color: var(--info-hover-color);
+        border: 1px solid var(--info-hover-color);
         transition: background-color ease 0.5s;
     }
 
     &:active {
         box-shadow: none !important;
-    }
-
-    &:disabled {
-        background-color: var(--gray-5-color);
-        pointer-events: none;
-        opacity: 0.5;
     }
 }
 
@@ -416,7 +415,7 @@ mat-select {
     line-height: 13px;
     color: var(--info-color);
     border: 1px solid var(--gray-9-color);
-    padding: 6px 15px;
+    padding: 8px 15px;
     border-radius: 4px;
     cursor: pointer;
 
@@ -428,7 +427,7 @@ mat-select {
     &:hover {
         color: var(--info-color);
         text-decoration: none;
-        background-color: var(--custom-secondary-color);
+        background: var(--custom-secondary-hover-color);
     }
 
     .delete-txt {
@@ -640,6 +639,7 @@ button.save-btn {
     font-weight: $weight-400;
     border-radius: 6px;
     letter-spacing: 0.4px;
+    cursor: pointer;
     background-color: transparent;
     box-shadow: var(--outer-shadow-1);
     border-color: transparent;
@@ -647,6 +647,10 @@ button.save-btn {
     font-style: $style-normal;
     font-size: $text-font;
     line-height: unset;
+
+    &:hover {
+        background-color: var(--gray-10-color);
+    }
 
     .mat-spinner {
         margin: 0 auto;
@@ -660,9 +664,11 @@ button:focus {
 
 .disabled,
 button:disabled {
-    background-color: var(--gray-5-color);
+    background-color: var(--gray-5-color) !important;
+    border: 1px solid var(--gray-5-color) !important;
+    color: var(--gray-3-color) !important;
     pointer-events: none;
-    opacity: 0.6;
+    opacity: 0.5;
 }
 
 .mat-button.mat-primary[disabled],
@@ -937,6 +943,14 @@ button:disabled {
     .mat-form-field-infix {
         border-top: 0px;
         padding: 0px;
+    }
+}
+
+.mat-dialog-actions {
+    button {
+        &:hover {
+            background-color: var(--gray-10-color);
+        }
     }
 }
 
